kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cargo-tracker
  labels:
    name: cargo-tracker
    app.kubernetes.io/name: cargo-tracker
